# binance-context-server

./: .env  .gitignore  LICENSE  README.md  USAGE_GUIDE.md  advanced_examples.py  binance-mcp-server.spec  example_usage.py  pyproject.toml  upload_to_pypi.bat  upload_to_pypi.py
.github/workflows/: build.yml  release.yml  test.yml
src/binance_context_server/: __init__.py  binance_client.py  resources.py  server.py  tools.py
tests/: test_binance_client.py  test_resources.py  test_tools.py
